# event-pos-desktop

./: .gitignore  APP_OVERVIEW.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.cursor/plans/: abrechnungslauf_sync_master_slave_faae74f1.plan.md  abrechnungsläufe_events_6a6227e0.plan.md  detailplanung_step_by_step.md  drilldown-lupe-neues-fenster_73e84678.plan.md  echtzeit-sync_und_join-benachrichtigung_8efe74f4.plan.md  entkoppeln_cancel_logik_pruefen_aff4a16c.plan.md  entkoppeln_cancel_pruefen_b5089576.plan.md  (+21 more)
.husky/: pre-commit
e2e-handbook-screenshots/: capture.mjs  package.json
scripts/: docker-rust-test-inner.sh  docker-rust-test.sh  render-handbuch-placeholders.mjs  sync-handbook-assets.mjs
src/: App.tsx  SyncDataContext.tsx  SyncStatusContext.tsx  db.test.ts  db.ts  i18n.ts  index.css  tauriInvoke.ts  userMessage.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.slave.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_phase2_ws_join.sql  003_phase4_stornos.sql  004_storno_sync.sql  005_haendler_felder.sql  006_abrechnungslauf.sql  007_haendler_email.sql  008_tls_cert_pins.sql
src-tauri/src/: commands.rs  db.rs  discovery.rs  lib.rs  tls.rs  user_error.rs
src-tauri/src/sync/: client.rs  mod.rs  protocol.rs  server.rs  status.rs  sync_db.rs
src-tauri/tests/: commands_db.rs  emergency_import.rs  sync_db.rs  sync_ring_n3.rs  wipe_local_data.rs
src-tauri/tests/common/: cluster.rs  mod.rs
(+137 files in other folders)
