[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
default = []
test = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
futures-util = { version = "0.3", features = ["sink"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = "0.4"
mdns-sd = "0.18"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sha2 = "0.10"
hex = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
url = "2.5"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
